@@ -6,6 +6,8 @@ Version 1.7.13+svn:
  * Language and i18n:
    * Updated translations: Czech, Italian, Polish.
 
+ * User interface:
+   * The empty spots in the game list in the lobby are gone.
 
 Version 1.7.13-1.8beta6:
  * Campaigns:
